@@ -1,2 +1,11 @@
+Jeff Breidenbach <jeff@alum.mit.edu>
 Dave Cole <dave@dccs.com.au>
+Dan Egnor <egnor@ofb.net>
+David Fallon <davef@tetsubo.com>
+Geoff Hanson <gwhizz@usa.net>
 Andy Heroff <aheroff@mediaone.net>
+Roman Hodek <roman@hodek.net>
+Steve Langasek <vorlon@dodds.net>
+Bibek Sahu <scorpio@dodds.net>
+Roderick Schertler <roderick@argon.org>
+Matt Waggoner <matt@waggoner.com>
